fix editor left section on mobile #83

--- a/app/assets/css/editor.css
+++ b/app/assets/css/editor.css
@@ -118,7 +118,7 @@
     }
 
     .editor--square{
-    	height: 220px;
+    	height: 250px;
     }
 
     .editor-image{
